--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "description": "This extension allows grepping header names and values of all requests",
   "version": "1.0",
 
-  "devtools_page": "devtools.html",
+  "devtools_page": "html/devtools.html",
   "permissions": [
     "http://*/*",
     "https://*/*"
