--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "npm run build",
-    "build": "monkberry template/*.monk --source-map --output view/view.js",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,5 +25,9 @@
   "homepage": "https://github.com/byrdal/header-grep#readme",
   "dependencies": {
     "monkberry": "^4.0.8"
+  },
+  "devDependencies": {
+    "monkberry-loader": "^4.0.8",
+    "webpack": "^3.6.0"
   }
 }
