--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "url": "https://github.com/byrdal/header-grep/issues"
   },
   "homepage": "https://github.com/byrdal/header-grep#readme",
-  "dependencies": {
-    "monkberry": "^4.0.8"
-  },
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "monkberry": "^4.0.8",
     "monkberry-loader": "^4.0.8",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "webpack": "^3.6.0"
   }
 }
