--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^3.6.0"
+  },
+  "dependencies": {
+    "monkberry-events": "^4.0.8"
   }
 }
