--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "npm run build",
     "build": "webpack",
     "watch": "webpack --watch",
+    "lint": "npx eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,16 +26,15 @@
   },
   "homepage": "https://github.com/byrdal/header-grep#readme",
   "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
-    "css-loader": "^2.1.1",
-    "mini-css-extract-plugin": "^0.11.0",
+    "css-loader": "^6.3.0",
+    "mini-css-extract-plugin": "^2.4.2",
     "monkberry": "^4.0.8",
     "monkberry-loader": "^4.0.8",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.19.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.58.0",
+    "webpack-cli": "^4.9.0"
   },
   "dependencies": {
     "monkberry-events": "^4.0.8"
