--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "header-grep",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Chrome extension, grep header names and values",
   "main": "index.js",
   "scripts": {
@@ -25,15 +25,15 @@
   },
   "homepage": "https://github.com/byrdal/header-grep#readme",
   "devDependencies": {
-    "css-loader": "^6.3.0",
-    "eslint": "^7.32.0",
-    "mini-css-extract-plugin": "^2.4.2",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.25.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "monkberry": "^4.0.8",
-    "monkberry-loader": "^4.0.8",
-    "node-sass": "^6.0.1",
-    "sass-loader": "^12.1.0",
-    "webpack": "^5.58.0",
-    "webpack-cli": "^4.9.0"
+    "monkberry-loader": "^4.0.9",
+    "node-sass": "^7.0.3",
+    "sass-loader": "^13.1.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "monkberry-events": "^4.0.8"
@@ -55,7 +55,6 @@
       "chrome": "readonly",
       "__dirname": "readonly"
     },
-    "rules": {
-    }
+    "rules": {}
   }
 }
