--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "mini-css-extract-plugin": "^2.6.1",
     "monkberry": "^4.0.8",
     "monkberry-loader": "^4.0.9",
-    "node-sass": "^9.0.0",
+    "sass": "^1.85.1",
     "sass-loader": "^14.1.1",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.10.0"
